Add youtube iframe player typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
   },
   "include": [
     "source/**/*",
-    "test/**/*"
+    "test/**/*",
+    "node_modules/@types/youtube/index.d.ts"
   ]
 }
 
