Adding playback rate changing, setting volume. Configurability complete. Multiplayer support in the demo.

--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "log4javascript": "^1.4.15",
-    "skicker-logger-manager": "git+ssh://git@skicker.fi:~/repos/skicker-logger-manager.git#0.0.7",
-    "youtube-player": "^5.4.0"
+    "skicker-logger-manager": "git+ssh://git@skicker.fi:~/repos/skicker-logger-manager.git#0.0.7"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.4",
