--- a/tsconfig.release.json
+++ b/tsconfig.release.json
@@ -1,7 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./release",
+    "outDir": "./release/",
     "sourceMap": false
-  }
+  },
+  "exclude": [
+    "./test"
+  ]
 }
