--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,15 +2,17 @@
   "compilerOptions": {
     "newLine": "lf",
     "charset": "utf8",
-    "declaration": true,
-    "sourceMap": true,
+    "declaration": false,
+    "sourceMap": false,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
     "jsx": "react",
     "allowJs": false,
     "baseUrl": "./",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "alwaysStrict":  true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/**/*",
