--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skicker-video-player",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "HTML5 module to playback video from multiple different sources",
   "keywords": [
     "video",
@@ -39,10 +39,11 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "skicker-logger-manager": "git+ssh://git@skicker.fi:~/repos/skicker-logger-manager.git#0.0.7"
+    "skicker-logger-manager": "git+ssh://git@skicker.fi:~/repos/skicker-logger-manager.git#0.0.10"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.4",
+    "@types/jquery": "^3.3.1",
     "@types/youtube": "0.0.31",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.3.1",
@@ -63,6 +64,7 @@
     "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.11.0",
     "webpack-hot-middleware": "^2.21.0",
+    "webpack-merge": "^4.1.2",
     "yaml-loader": "^0.5.0"
   },
   "private": true
