--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.8.4",
     "@types/jquery": "^3.3.1",
+    "@types/node": "^9.6.4",
     "@types/youtube": "0.0.31",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.3.1",
